objects/Contact__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Contact</externalName>
    <fields>
        <fullName>ACT360_Contact_Key_Fields_OK_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_Contact_Key_Fields_OK__c</externalDeveloperName>
        <label>ACT360 - Contact Key Fields OK</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivationRequest_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ActivationRequest__c</externalDeveloperName>
        <label>Activation Requested</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <externalDeveloperName>AssistantName</externalDeveloperName>
        <label>Assistant's Name</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantPhone__c</fullName>
        <externalDeveloperName>AssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Billing__c</externalDeveloperName>
        <label>Billing</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <externalDeveloperName>Birthdate</externalDeveloperName>
        <label>Birthdate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CanAllocateManagers_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CanAllocateManagers__c</externalDeveloperName>
        <inlineHelpText>When checked, gives Partner Users the power to allocate Manager to other colleagues in a same Distributor Account through the "Reports To" field in Contact Records. It also give the power to check this checkbox on other colleagues (Distributor Contacts).</inlineHelpText>
        <label>Can Allocate Managers</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanRequestUserCreation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CanRequestUserCreation__c</externalDeveloperName>
        <inlineHelpText>Determines whether the partner user can request to bioMérieux activation / suspension / definitive deactivation of other colleagues in the Distributor Account.</inlineHelpText>
        <label>Can Request User Creation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHardBounced_c__c</fullName>
        <externalDeveloperName>ContactHardBounced__c</externalDeveloperName>
        <label>Email Deliverability</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_ID_18_c__c</fullName>
        <externalDeveloperName>Contact_ID_18__c</externalDeveloperName>
        <label>Contact ID 18</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type_c__c</fullName>
        <externalDeveloperName>Contact_Type__c</externalDeveloperName>
        <label>Contact Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>need values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correspondence_Roles_c__c</fullName>
        <externalDeveloperName>Correspondence_Roles__c</externalDeveloperName>
        <label>Correspondence Roles</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Software Updates</fullName>
                </value>
                <value>
                    <fullName>System Contact</fullName>
                </value>
                <value>
                    <fullName>Training Contact</fullName>
                </value>
                <value>
                    <fullName>Reagent Contact</fullName>
                </value>
                <value>
                    <fullName>SDS – Safety Data Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataQuality_c__c</fullName>
        <externalDeveloperName>DataQuality__c</externalDeveloperName>
        <label>Data Quality</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateOfAcceptance_c__c</fullName>
        <externalDeveloperName>DateOfAcceptance__c</externalDeveloperName>
        <label>Acceptance date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Power_c__c</fullName>
        <externalDeveloperName>Decision_Power__c</externalDeveloperName>
        <inlineHelpText>0 is lower power. 5 is the maximum power.</inlineHelpText>
        <label>Decision Power</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Type_c__c</fullName>
        <externalDeveloperName>Department_Type__c</externalDeveloperName>
        <label>Department Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_c__c</fullName>
        <externalDeveloperName>Department__c</externalDeveloperName>
        <label>Department</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial Stewardship Program</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Blood Bank</fullName>
                </value>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Cardiac Surgery</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Emergency Department</fullName>
                </value>
                <value>
                    <fullName>Environmental Monitoring</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food Safety</fullName>
                </value>
                <value>
                    <fullName>General Ward</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Head Quarter</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Hospital Administration</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Infection Prevention</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Information Systems</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Materials Management</fullName>
                </value>
                <value>
                    <fullName>Media Preparation</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Contact Description</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistributorAccountOwnerEmail_c__c</fullName>
        <externalDeveloperName>DistributorAccountOwnerEmail__c</externalDeveloperName>
        <label>Distributor Account Owner Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DistributorUserEmailforadminRequest_c__c</fullName>
        <externalDeveloperName>DistributorUserEmailforadminRequest__c</externalDeveloperName>
        <label>Distributor User Email for admin Request</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>DoNotCall</externalDeveloperName>
        <label>Do Not Call</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPartner_Tech_c__c</fullName>
        <externalDeveloperName>EmailPartner_Tech__c</externalDeveloperName>
        <label>EmailPartner_Tech</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Business Fax</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Email_c__c</fullName>
        <externalDeveloperName>Group_Email__c</externalDeveloperName>
        <label>Group Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
        <label>Email Opt Out</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOptedOutOfFax</externalDeveloperName>
        <label>Fax Opt Out</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inactivationrequest_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactivationrequest__c</externalDeveloperName>
        <label>Deactivation requested</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactive__c</externalDeveloperName>
        <label>Inactive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <externalDeveloperName>IndividualId</externalDeveloperName>
        <label>Individual ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEmailBounced</externalDeveloperName>
        <label>Is Email Bounced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function_c__c</fullName>
        <externalDeveloperName>Job_Function__c</externalDeveloperName>
        <label>Job Function</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesiologist</fullName>
                </value>
                <value>
                    <fullName>Biologist</fullName>
                </value>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Clinician</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologiest</fullName>
                </value>
                <value>
                    <fullName>Innovation Manager</fullName>
                </value>
                <value>
                    <fullName>Internist</fullName>
                </value>
                <value>
                    <fullName>Microbiologist</fullName>
                </value>
                <value>
                    <fullName>Nephrologist</fullName>
                </value>
                <value>
                    <fullName>Neurologist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Pediatrician</fullName>
                </value>
                <value>
                    <fullName>Pharm. D.</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Pulmonologist</fullName>
                </value>
                <value>
                    <fullName>QA/QC</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Technologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KOL_Champion_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>KOL_Champion__c</externalDeveloperName>
        <label>KOL Champion</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Key_contact__c</externalDeveloperName>
        <label>Key contact</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_operator_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Key_operator__c</externalDeveloperName>
        <label>Key operator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_c__c</fullName>
        <externalDeveloperName>Language__c</externalDeveloperName>
        <label>Language</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <externalDeveloperName>LastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastRequesterEmail_c__c</fullName>
        <externalDeveloperName>LastRequesterEmail__c</externalDeveloperName>
        <label>Last Requester Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailSalutation_c__c</fullName>
        <externalDeveloperName>MailSalutation__c</externalDeveloperName>
        <inlineHelpText>Salutation value displayed in email communication.</inlineHelpText>
        <label>Mail Salutation</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <externalDeveloperName>MailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <externalDeveloperName>MailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountryCode__c</fullName>
        <externalDeveloperName>MailingCountryCode</externalDeveloperName>
        <label>Mailing Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <externalDeveloperName>MailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>